<resources>
    <string name="app_name">What\'s Open</string>
    <string name="toast_set_favorite">Added %s to Favorites</string>
    <string name="toast_unset_favorite">Removed %s from Favorites</string>

    <!-- Strings for MainActivity -->
    <string name="search_hint">Search&#8230;</string>

    <!-- Strings for NotificationDialog -->
    <string name="remove_all_text">Remove All</string>

    <!-- Strings for PreferenceFragment -->
    <string name="title_list_view">List View</string>
    <string name="title_list_view_information">Duration display</string>
    <string name="title_list_view_default_tab">Default tab</string>
    <string name="title_rotation">Rotation</string>
    <string name="title_turn_off_rotation">Turn off rotation</string>
    <string name="title_notification">Notifications</string>
    <string name="title_turn_off_vibrations">Turn off vibrations</string>
    <string name="title_dark_theme">Dark theme</string>
    <string-array name="entries_list_view_information_preference">
        <item>Both</item>
        <item>Only for open Facilities</item>
        <item>Only for closed Facilities</item>
        <item>None</item>
    </string-array>
    <string-array name="entryvalues_list_view_information_preference">
        <item>display_duration_both</item>
        <item>display_duration_open</item>
        <item>display_duration_closed</item>
        <item>display_duration_none</item>
    </string-array>
    <string-array name="entries_list_view_default_tab_preference">
        <item>All</item>
        <item>Favorites</item>
        <item>Open</item>
        <item>Closed</item>
    </string-array>
    <string-array name="entryvalues_list_view_default_tab_preference">
        <item>default_tab_all</item>
        <item>default_tab_favorites</item>
        <item>default_tab_open</item>
        <item>default_tab_closed</item>
    </string-array>

</resources>
